addio auto check in

--- a/SP/Homework 1/main.tex
+++ b/SP/Homework 1/main.tex
@@ -16,9 +16,9 @@
 			\vspace{5pt}
 			\textbf{M.S. in Stochastics and Data Science}\\
 			\vspace{20pt}
-			\textit{Niccolò Disassonia} 863128 \\
+			\censor{\textit{Niccolò Disassonia} 863128 \\
 			\textit{Varaga Haghoubians} 1088805\\
-			\textit{Lorenzo Sala} 943481\\
+			\textit{Lorenzo Sala} 943481\\}
 			\vspace{5pt}
 			\today
 		\end{center}
